--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color: #DBC0FF;">
 
 <h1 style = "font-size: 45px;">Laveena Lee</h1>
-<p><img src="me.jpg" width = "200" height = "300"></p>
+<p><img src="me.JPG" width = "200" height = "300"></p>
 
 <p>My name is Laveena. I was born in Manhattan, NYC.
 <br> I have a golden retriever named Simba. He and my mom are my best friends.
