Laveena in the City

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p><img src="me.JPG" width = "200" height = "300"></p>
 
 <p>My name is Laveena. I was born in Manhattan, NYC.
-<br> I have a golden retriever named Simba. He and my mom are my best friends.
+<br> I have a golden retriever named Simba. He and my mom are best friends.
 <br> Favorite food is noodles. Noodles of any cuisine, no matter shpae or size, I do not discriminate. 
 <br> My major is Policy Studies with a minor in Italian and Information Technologies. </p>
 
